--- a/package.json
+++ b/package.json
@@ -13,21 +13,10 @@
     "url": "https://github.com/imccunn/socket-chat/issues"
   },
   "homepage": "https://github.com/imccunn/socket-chat",
-  "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "chai": "^4.1.2",
-    "express": "^4.16.2",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "sinon": "^4.2.2",
-    "socket.io": "^2.0.4",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
-  },
-  "private": true
+  "dependencies": {},
+  "private": true,
+  "devDependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
+  }
 }
